--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -33,7 +33,7 @@
         <li><a href="mailto:{{site.email}}"> {{site.email}}</a></li>
         <li><a href="tel:{{site.phone}}"> {{site.phone}}</a></li>
         <p>
-          <li><a href="https://www.linkedin.com/in/melissabellatx/"><i class="fab fa-linkedin fa-lg"></i></a></li>
+          <li><a href="https://www.linkedin.com/in/melissabellatx/"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
         </p>
         <!--Start of Tawk.to Script-->
         <!--
