--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -2,14 +2,23 @@
 	<div class="">
 		<div class="owl-carousel owl-theme carousel-1">
 			<div class="item position-relative">
-			
 				<div class="car-image" style="background-image: url(/images/carousel/silver-ford-focus-2800 _ 1576.jpg)"></div>
 				<div class="text-container position-absolute">
-					<p>Safe Driving and Rehabilitation</p>
-					<h1>Professional Assessment, Training, and Support.</h1>
+					<p>News</p>
+					<h1>RoSA Webpage is open!</h1>
+					<a class="btn btn-primary" href="https://www.4399.com" target="_blank">Read More</a>
 				</div>
 			</div>
-			
+
+			<div class="item">
+				<div class="car-image" style="background-image: url(/images/carousel/women-1209678_1280.jpg)"></div>
+				<div class="text-container position-absolute">
+					<p>2019</p>
+					<h1>Post-half Biobank Seminar in Seoul</h1>
+					<a class="btn btn-primary" href="https://www.4399.com" target="_blank">Read More</a>
+				</div>
+			</div>
+
 		</div>
 	</div>
 </section>
