--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -172,10 +172,10 @@
   {% if page.url == '/' %}
   <script>
     $('.carousel-1').owlCarousel({
-      loop: false,
+      loop: true,
       nav: false,
-      dots: false,
-      autoplay: false,
+      dots: true,
+      autoplay: true,
       autoplayTimeout: 5000,
       autoplaySpeed: 30000,
       responsive: {
