--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -194,10 +194,10 @@
 
   <script>
     $('.carousel-2').owlCarousel({
-      loop: false,
-      nav: true,
+      loop: true,
+      nav: false,
       dots: true,
-      autoplay: false,
+      autoplay: true,
       autoplayTimeout: 5000,
       autoplaySpeed: 3000,
       responsive: {
