--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -194,10 +194,10 @@
 
   <script>
     $('.carousel-2').owlCarousel({
-      loop: true,
-      nav: false,
-      dots: true,
-      autoplay: true,
+      loop: false,
+      nav: true,
+      dots: false,
+      autoplay: false,
       autoplayTimeout: 5000,
       autoplaySpeed: 3000,
       responsive: {
