--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -172,12 +172,12 @@
 {% if page.url == '/' %}
 <script>
   $('.carousel-1').owlCarousel({
-    loop: true,
+    loop: false,
     nav: false,
-    dots: true,
-    autoplay: true,
+    dots: false,
+    autoplay: false,
     autoplayTimeout: 5000,
-    autoplaySpeed: 3000,
+    autoplaySpeed: 30000,
     responsive: {
       0: {
         items: 1
@@ -190,14 +190,13 @@
       }
     }
   });
-
 </script>
 
 <script>
   $('.carousel-2').owlCarousel({
     loop: false,
     nav: true,
-    dots: false,
+    dots: true,
     autoplay: false,
     autoplayTimeout: 5000,
     autoplaySpeed: 3000,
@@ -213,7 +212,6 @@
       }
     }
   });
-
 </script>
 
 <script>
@@ -237,7 +235,6 @@
       }
     }
   });
-
 </script>
 {% endif %}
 </body>
